<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/mapsFragment">

    <fragment
        android:id="@+id/mapsFragment"
        android:name="it.units.borghisegreti.fragments.MapsFragment"
        android:label="fragment_maps"
        tools:layout="@layout/fragment_maps" >
...
            android:id="@+id/action_mapsFragment_to_experiencesFragment"
            app:destination="@id/experiencesFragment"
            app:popUpTo="@id/navigation_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="it.units.borghisegreti.fragments.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_mapsFragment"
            app:destination="@id/mapsFragment"
...
