<resources>
    <string name="app_name">QuietOffice</string>
    <string name="ok">OK</string>
    <string name="setObjective_buttonText">set as objective</string>
    <string name="removeObjective_buttonText">remove as objective</string>
    <string name="complete_experience">Complete the experience</string>
    <string name="completed">Completed in date </string>
    <string name="gained_points">%d points</string>
    <string name="next_objective_toast">What would be your next objective?</string>
    <string name="experience_completed">EXPERIENCE COMPLETED</string>
    <string name="experience_completed_title">Experiences</string>
    <string name="gained_points_alert">You gained %d points!</string>
    <string name="permissions_not_granted">Permissions not granted, unable to show map</string>
    <string name="educational_permission_request_title">Need permissions to access user location</string>
    <string name="educational_permission_request_content">These permissions are necessary to use the map correctly</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign-up</string>
    <string name="field_required">Field required</string>
    <string name="registration_email">Insert email</string>
    <string name="registration_confirm_email">Confirm email</string>
    <string name="registration_password">Insert password</string>
    <string name="registration_password_confirm">Confirm password</string>
    <string name="registration_button">Register</string>
    <string name="registration_cancel">Cancel</string>
    <string name="email_mismatch">Emails not matching</string>
    <string name="email_bad_format">The email address is badly formatted</string>
    <string name="password_mismatch">Passwords not matching</string>
    <string name="password_weak">Password has to be at least 6 characters long</string>
    <string name="menu_completed_experiences_label">Experiences</string>
    <string name="menu_map_label">Map</string>
    <string name="menu_user_label">Profile</string>
    <string name="map_search_button_label">What do you want to do today?</string>
    <string name="completed_experience_logo_description">Completed experience logo</string>
    <string name="account_button">Account</string>
    <string name="settings_button">Settings</string>
    <string name="assistance_button">Assistance</string>
    <string name="legal_terms_button">Legal terms</string>
    <string name="completed_activities_button">Completed activities</string>
    <string name="log_out_button">Log out</string>
    <string name="book_button_text">Book now</string>
    <string name="experience_image_description">Experience image</string>
    <string name="close_dialog_description">Close the dialog</string>
    <string name="mountain">Mountain</string>
    <string name="naturalistic_area">Naturalistic area</string>
    <string name="panoramic_view">Panoramic view</string>
    <string name="point_of_historical_interest">Point of historical interest</string>
    <string name="restaurant">Restaurant</string>
    <string name="river_waterfall">Waterfall</string>
    <string name="typical_food">Typical food</string>
</resources>
