<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegistrationFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/registration_email"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/max_email_text_length"
        app:errorEnabled="true"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/registration_email_confirm_layout"
        app:layout_constraintBottom_toTopOf="@+id/registration_password_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registration_email"
            android:inputType="textEmailAddress"
            android:maxLength="@integer/max_email_text_length" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_email_confirm_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/registration_confirm_email"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/max_email_text_length"
        app:errorEnabled="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/registration_email_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registration_email_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registration_email_confirm"
            android:inputType="textEmailAddress"
            android:maxLength="@integer/max_email_text_length" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_password_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/registration_password"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/max_password_text_length"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_email_layout"
        app:layout_constraintEnd_toStartOf="@+id/registration_password_confirm_layout"
        app:layout_constraintBottom_toTopOf="@+id/registration_button">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registration_password"
            android:inputType="textPassword"
            android:maxLength="@integer/max_password_text_length" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registration_password_confirm_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/registration_password_confirm"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/max_password_text_length"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/registration_password_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registration_password_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registration_password_confirm"
            android:inputType="textPassword"
            android:maxLength="@integer/max_password_text_length" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registration_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/registration_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_password_layout"
        app:layout_constraintEnd_toStartOf="@+id/cancel_registration_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_registration_button"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/registration_cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/registration_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/registration_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
